Fixes code-block wrapping issue.

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -63,6 +63,10 @@ img[loading] {
 	padding: 1em 1em 1em 0em;
 }
 
+code {
+	word-break: break-word;
+}
+
 :root {
 	--accent-color: $accentColor;
 	--text-color: $textColor;
